Harden production configs: CORS wildcard handling, JWT filter exception safety, and Railway DB auto-detection